<resources>
    <string name="app_name">智得能源</string>
    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="shower_title">洗澡</string>
    <string name="shower_en_title">Bath</string>
    <string name="recharge_title">充值</string>
    <string name="recharge_en_title">Recharge</string>

    <string name="can_use_money">账户可用余额：</string>
    <string name="yuan">元</string>
    <string name="more">更多></string>
    <string name="news_title">消息</string>


    <string name="home_tab">首页</string>
    <string name="about_tab">关于</string>
    <string name="mine_tab">我的</string>
    <string name="mine_tab_title">个人中心</string>
    <string name="mine_charge">充值</string>

    <string name="dialog_tips_title">提醒</string>
    <string name="dialog_bluetooth_bind">是否确定绑定该水表</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="open">开启</string>
    <string name="repair_confirm">确认提交</string>
    <string name="repair_meter">我已重启水表设备</string>

    <string name="dialog_bluetooth_connect">请打开手机蓝牙用于平台与水表连接</string>
    <string name="dialog_bluetooth_stop_hints">手机蓝牙已断开，洗澡功能将退出，请重新连接</string>
    <string name="dialog_bluetooth_stop_for_running">手机蓝牙已断开，计费暂停，请打开蓝牙并重新连接</string>


    <string name="driver_connect_start">点击开始搜索</string>
    <string name="driver_connect_stop">已经停止搜索</string>
    <string name="driver_connect_restart">点击重新搜索</string>

    <string name="driver_please_search">请选择设备：</string>
    <string name="driver_connect_search">设备搜索中</string>
    <string name="driver_connect_count1">已搜索出</string>
    <string name="driver_connect_count2">台设备</string>

    <string name="connecting_device">设备连接中···</string>
    <string name="connected_device">设备已连接</string>
    <string name="un_connect_device">无法连接设备</string>
    <string name="error_qr">无效的二维码！</string>


    <string name="about_failure_reporting">故障报修</string>
    <string name="about_operation_guide">操作指引</string>
    <string name="about_version">版本</string>
    <string name="about_service_phone">服务电话</string>
    <string name="about_service_phone_number">400-777-8408</string>

    <string name="shower_driver_reg">设备登记</string>

    <string name="driver_bluetooth_connecting">正在配对</string>
    <string name="driver_bluetooth_connect_finish">配对结束</string>
    <string name="driver_bluetooth_connect_fail">配对失败</string>
    <string name="driver_bluetooth_connect_cancel">取消配对</string>

    <string name="driver_start_using">点击开始洗澡</string>
    <string name="driver_stop_use">点击结束洗澡</string>

    <string name="driver_wash_clothes">洗衣中</string>
    <string name="driver_click_restart">点击重试</string>
    <string name="driver_click_reconnect">点击重连</string>
    <string name="driver_connect_success">连接成功</string>
    <string name="driver_connect_fail">连接失败</string>

    <string name="download_tate_success">下发费率成功</string>
    <string name="download_tate_fail">下发费率失败</string>
    <string name="clean_cache_success">清除缓存成功</string>

    <string name="device_no_login">此设备未登记，请先登记</string>
    <string name="device_login_success">设备登记成功</string>
    <string name="device_login_select_type">请选择登记类型</string>

    <string name="payment_cards">刷卡消费中</string>

    <string name="water_meter">热水表</string>
    <string name="water_fountain">饮水机</string>
    <string name="washing_machine">洗衣机</string>
    <string name="hair_drier">吹风机</string>
    <string name="Charger">充电器</string>
    <string name="air_conditioner">空调</string>
    <string name="other">其他</string>


    <string name="charge_act_introduce"> 充值活动说明：</string>
    <string name="charge_introduce"> 充值说明：</string>
    <string name="charge_IntroContent"> 新用户首次充值不得低于100元;\n旧用户首次充值不得低于30元;</string>
    <string name="with_draw_title">退款</string>
    <string name="reset_password_title">密码重置</string>
    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">支付结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="app_tip">提示</string>
    <string name="my_bill_title">我的账单</string>

    <string name="get_net_data_error">请求数据出错</string>

    <string name="repair_title">故障报修</string>
    <string name="operate_guide_title">操作指引</string>
    <string name="bath_operate_guide_tip">洗澡功能操作指引</string>

    <string name="with_draw_empty_tip">请填写完整信息</string>
    <string name="charge_other_tip">其他</string>
    <string name="input_other_money_tip">输入其他充值金额</string>

    <string name="register_count_time">%ss后重新发送</string>
    <string name="register_get_code">获取短信验证码</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="agreement_tip">我已阅读并同意</string>
    <string name="agreement_content_tip">《智得能源使用协议》</string>
    <string name="select_pay_type">请选择支付方式</string>
    <string name="card_pay_tip">卡片充值说明：</string>
    <string name="card_pay_content">卡片充值是将账户基本余额转账至用户指定热水卡中;\n
    充值完成后，请尽快在指定热水设备中刷卡完成转账。</string>
    <string name="card_bill_title">卡片充值账单</string>

    <string name="register_agree_tip">请先同意使用协议</string>
    <string name="register_no_phone">手机号不能为空</string>
    <string name="register_no_code">验证码不能为空</string>
    <string name="register_no_psw">密码不能为空</string>
    <string name="scan_code">扫码失败，请重试</string>
    <string name="charge_time">充值时间</string>
    <string name="type">类型</string>
    <string name="trans_money">发生金额</string>
    <string name="card_money">卡片余额</string>
    <string name="login">登录</string>
    <string name="charge_error">充值参数异常</string>

    <string name="shower_money_unit">￥%s</string>
    <string name="shower_balance_title">当前余额</string>
    <string name="shower_deducting_title">预扣金额</string>
    <string name="shower_device_title">设备名称</string>
    <string name="all_str">全部</string>
    <string name="pay_str">支出</string>
    <string name="select_fault_device_tip">请先选择故障设备</string>
    <string name="submit_ing">提交中...</string>
    <string name="can_withdraw_money">可退款金额为0</string>
    <string name="please_bind_school_tip">请先绑定学校</string>
    <string name="login_out">退出登录</string>
    <string name="tel_phone_hint">电话号码/Tel：</string>
    <string name="password">密码/Password：</string>
    <string name="remember_psw">记住密码</string>
    <string name="forget_psw">忘记密码?</string>
    <string name="shower_completed_time">结束时间</string>
    <string name="shower_return_money">返回金额</string>
    <string name="shower_pay_money">消费金额</string>


    <string name="consume_title">消费详情</string>
    <string name="shower_completed">洗澡完成</string>
    <string name="shower_back">返回</string>

    <string name="pay_success">充值成功</string>
    <string name="pay_failed">对不起，充值失败</string>
    <string name="pay_cancel">充值取消</string>

    <string name="login_loading">登录中...</string>
    <string name="charge_loading">充值中...</string>
    <string name="please_install_weChat">请先安装微信客户端！</string>
    <string name="please_install_aliPay">请先安装支付宝客户端！</string>
    <string name="no_bind_school">未绑定学校</string>
    <string name="input_address_tip">请输入地址</string>
    <string name="input_stu_id">请输入学号</string>
    <string name="school_qr_code">学校二维码</string>
    <string name="change_psw_title">修改密码</string>
    <string name="input_old_psw">请输入旧密码</string>
    <string name="input_new_psw">请输入新密码</string>
    <string name="no_equal_psw">两次密码不一致</string>
    <string name="return_tip_one">仅退还现金余额，退款后账号赠送余额清零</string>
    <string name="sure_return_tip">确认要退款吗？</string>
    <string name="input_other_tip">请输入自定义金额(%s-%s元)</string>
    <string name="input_card_money">请输入充值金额，不小于10元</string>
    <string name="trans_in_card">转入卡片</string>
    <string name="trans_out_card">转入卡内</string>
    <string name="yes_tip">是</string>
    <string name="loading">加载中...</string>

    <string name="shower_scan">扫一扫</string>
    <string name="scanner_qr_title">二维码扫描</string>
    <string name="complete_info_tip">请先绑定学校及完善个人信息</string>
    <string name="select_amount">请选择充值金额</string>
    <string name="failed_reson_tip">失败原因：</string>

    <string name="device_using_hints">其它用户正在使用中，请稍等</string>
    <string name="device_charging_hints">其它人正在使用设备刷卡消费中，请稍等</string>


    <string name="agreement_url_title">智得能源使用协议</string>
    <string name="to_bind_card">用户未绑定卡片信息，请先绑定热水卡</string>
    <string name="no_low_10_yuan">卡片充值金额限定不能小于10元</string>

    <string name="dialog_network_stop_connect">网络连接出错</string>


    <string name="about_title">关于</string>
    <string name="depart_name">广州智得能源科技有限公司 \n 版本号：V%s</string>
    <string name="act_ver_update_checking">版本检查中...</string>
    <string name="act_is_new_ver">当前已是最新版本</string>
    <string name="please_input_psw">请输入密码</string>
    <string name="please_input_code">输入验证码</string>

    <string name="have_no_data">暂无数据</string>
    <string name="wechat_scheme">%s</string>

    <string name="dialog_device_no_match">连接的设备与宿舍绑定的设备不一致</string>

</resources>
