<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zhide.app.view.activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/bg" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/com_white_10r_shape">

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel_phone_hint"
                android:textColor="@color/text_gray"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/edtPhoneNumber"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/com_btn_line_black_shape"
                android:maxLength="11"
                android:paddingLeft="5dp"
                android:text=""
                android:textColorHint="@color/text_gray"
                android:hint="@string/please_input_phone"
                android:textSize="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="@color/text_gray"
                android:textSize="14dp" />

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@color/white">

                <EditText
                    android:id="@+id/edtPsw"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/com_btn_line_black_shape"
                    android:inputType="textPassword"
                    android:textColorHint="@color/text_gray"
                    android:paddingLeft="5dp"
                    android:hint="@string/please_input_psw"
                    android:textSize="13dp" />

                <ImageView
                    android:id="@+id/ivRightIcon"
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_alignRight="@id/edtPsw"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/eye_psw" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/ckRememberPsw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_psw"
                    android:textColor="@color/text_gray"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tvForgetPsw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:autoLink="all"
                    android:text="@string/forget_psw"
                    android:textColor="@color/main_blue_color"
                    android:textColorLink="@color/main_blue_color"
                    android:textSize="12dp" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlLogin"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@drawable/com_blue_10r_left_shape"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivEnter"
                android:layout_width="15dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/enter" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivEnter"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/login"
                android:textColor="@color/main_blue_color"
                android:textSize="15dp" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
